--- a/src/components/rental-list/rental-list.scss
+++ b/src/components/rental-list/rental-list.scss
@@ -151,6 +151,7 @@
         display: flex;
         img {
           max-width: 110px;
+          max-height: 80px;
         }
         ul {
           font-size: 0.75rem;
