--- a/src/views/rental-details/rental-details.html
+++ b/src/views/rental-details/rental-details.html
@@ -285,13 +285,13 @@
         <div class="mt-4">
           <h5 class="my-3">Frequently Asked Questions</h5>
           <accordion>
-            <accordion-item v-for="faq, index in getRentalFAQ" :key="index">
+            <accordion-item v-for="faq, index in getRentalFAQ.faq" :key="index">
               <template slot="accordion-trigger">
-                <p>{{faq.q}}</p>
+                <p>{{faq.faqQuestion}}</p>
                 <font-awesome-icon :icon="['fas','chevron-circle-down']" />
               </template>
               <template slot="accordion-content">
-                <span>{{faq.a}}</span>
+                <span>{{faq.faqAnswer}}</span>
               </template>
             </accordion-item>
           </accordion>
